results/SVCOMP/2-shot/log-AlarmOutputs-2024_03_18_21_49_38.txt
import java.util.Random;

final class Verifier {
    //@ ensures \result == \old(\result);
    public static int nondetInt() {
        return new Random().nextInt();
    }
}

public class AlarmOutputs {
    public int isAudioDisabled = Verifier.nondetInt();
    public int notificationMessage = Verifier.nondetInt();
    public int audioNotificationCommand = Verifier.nondetInt();
    public int highestLevelAlarm = Verifier.nondetInt();
    public int logMessageId = Verifier.nondetInt();
}
/home/max/Documents/JMLGPT/tmp/AlarmOutputs.java:4: error: A \result expression is not allowed in an old environment
    //@ ensures \result == \old(\result);
                                ^
1 error

